# data-privacy-agent

./: .gitignore  pyproject.toml
data/examples/: examples.py
data/privacy_policy_documents/: chatgpt_document.md  deepseek_document.md  manual_document.md
data/processed/: examples_export.json
notebooks/: experimentation.ipynb
src/privacy_agent/: chain.py  prompts.py  utils.py
