[project]
name = "data-privacy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain[openai]>=0.3.26",
    "langgraph-cli[inmem]>=0.3.3",
    "markdown>=3.8.2",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.1",
    "unstructured>=0.18.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
